--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -35,12 +35,14 @@ p2 {
 
 .links {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    
     padding: 10px;
     font-size: 25px;
 }
